## Process this file with automake to produce Makefile.in

## Created by Anjuta

INCLUDES = \
	$(WX_CXXFLAGS) \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" $(MULTIGET_CFLAGS)

AM_CFLAGS =\
	 -Wall \
	 -g \
	 $(WX_CPPFLAGS)

bin_PROGRAMS = multiget

multiget_SOURCES = \
	addproxydlg.cpp\
	addproxydlg.h \
	batch.cpp \
	batch.h \
	common.cpp \
	common.h \
	configwin.cpp \
	configwin.h \
	dropurl.cpp \
	dropurl.h \
	filemd5.cpp \
	filemd5.h \
	floatwin.cpp \
	floatwin.h \
	hidewin.cpp \
	hidewin.h \
	lefttree.cpp \
	lefttree.h \
	lefttreeitemdata.cpp \
	lefttreeitemdata.h \
	listenpipe.cpp \
	listenpipe.h \
	mainframe.cpp \
	mainframe.h \
	MD5.cpp \
	meterctrl.cpp \
	meterctrl.h \
	mgapp.cpp \
	mgapp.h \
	mgfilemanager.cpp \
	mgfilemanager.h \
	mgftpants.cpp \
	mgftpants.h \
	mgftpbase.cpp \
	mgftpbase.h \
	mgftpinfo.cpp \
	mgftpinfo.h \
	mgftpsocket.cpp \
	mgftpsocket.h \
	mghttpants.cpp \
	mghttpants.h \
	mghttpbase.cpp \
	mghttpbase.h \
	mghttpinfo.cpp \
	mghttpinfo.h \
	mghttpsocket.cpp \
	mghttpsocket.h \
	mgnewtaskdlg.cpp \
	mgnewtaskdlg.h \
	mgproxysocket.cpp \
	mgproxysocket.h \
	mgsingletask.cpp \
	mgsingletask.h \
	mgsocket.cpp \
	mgsocket.h \
	mgurlparser.cpp \
	mgurlparser.h \
	mirroradmin.cpp \
	mirroradmin.h \
	proants.cpp \
	proants.h \
	propertydlg.cpp \
	propertydlg.h \
	proxydlg.cpp \
	proxydlg.h \
	rightdownsplitter.cpp \
	rightdownsplitter.h \
	righttree.cpp \
	righttree.h \
	righttreeitemdata.cpp \
	righttreeitemdata.h \
	showtablewindow.cpp \
	showtablewindow.h \
	singlecheck.cpp \
	singlecheck.h \
	speedctrl.cpp \
	speedctrl.h \
	systray.cpp \
	systray.h \
	taskdetailreport.cpp \
	taskdetailreport.h \
	tasklist.cpp \
	tasklist.h \
	taskmanager.cpp \
	taskmanager.h \
	threadinfowindow.cpp \
	threadinfowindow.h

multiget_LDFLAGS = 

multiget_LDADD = \
	$(MULTIGET_LIBS) \
	$(WX_LIBS)

